Temp fix for empty API check.